Complete dark mode functionality
Complete dark mode functionality

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --bg-light: #ffffff; /* Light background color */
-  --text-light: #000000; /* Light text color */
-  
-  /* Other custom colors */
+body {
+  height: 100vh;
 }
